WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199754
Regression(macOS Catalina): Cannot quick look html documents in Mail
https://bugs.webkit.org/show_bug.cgi?id=199754
Summary
Regression(macOS Catalina): Cannot quick look html documents in Mail
Chris Dumez
Reported
2019-07-12 13:11:25 PDT
Cannot quick look html documents in Mail due to sandboxing errors.
Attachments
Patch
(2.53 KB, patch)
2019-07-12 13:14 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.59 KB, patch)
2019-07-12 14:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-07-12 13:11:41 PDT
<
rdar://problem/51304961
>
Chris Dumez
Comment 2
2019-07-12 13:14:22 PDT
Created
attachment 374029
[details]
Patch
Geoffrey Garen
Comment 3
2019-07-12 13:15:56 PDT
Comment on
attachment 374029
[details]
Patch Can we test this with an API test?
Chris Dumez
Comment 4
2019-07-12 13:20:57 PDT
(In reply to Geoffrey Garen from
comment #3
)
> Comment on
attachment 374029
[details]
> Patch > > Can we test this with an API test?
No, as far as I know, we cannot API test sandboxing since TestWebKitAPI is not sandboxed.
Chris Dumez
Comment 5
2019-07-12 13:51:43 PDT
Comment on
attachment 374029
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374029&action=review
> Source/WebKit/UIProcess/WebPageProxy.cpp:1061 > // FIXME: universal file read access should be set if the sandbox extension is successfully created:
rdar://problem/52357508
.
Oh, I should drop this comment too. I am currently validating that my patch did not regress what
rdar://problem/52357508
was trying to fix, before I land this.
Chris Dumez
Comment 6
2019-07-12 14:04:35 PDT
Comment on
attachment 374029
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374029&action=review
>> Source/WebKit/UIProcess/WebPageProxy.cpp:1061 >> // FIXME: universal file read access should be set if the sandbox extension is successfully created:
rdar://problem/52357508
. > > Oh, I should drop this comment too. I am currently validating that my patch did not regress what
rdar://problem/52357508
was trying to fix, before I land this.
Ok, I have confirmed that
rdar://problem/52357508
is also fixed with my patch. I'll drop the FIXME comment before landing.
Chris Dumez
Comment 7
2019-07-12 14:06:00 PDT
Created
attachment 374034
[details]
Patch
WebKit Commit Bot
Comment 8
2019-07-12 15:03:33 PDT
Comment on
attachment 374034
[details]
Patch Clearing flags on attachment: 374034 Committed
r247400
: <
https://trac.webkit.org/changeset/247400
>
WebKit Commit Bot
Comment 9
2019-07-12 15:03:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug